--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: aleksandrkovalenko/gatsby-site
   branch: master
 
 media_folder: "static/media"
